got buttons centered to display correctly on mobile and pc

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -37,15 +37,12 @@
   background-color: #c82d2d;
   border: none;
   color: white;
-  margin-left: -7rem;
 }
 
 #viewhighbtn {
   background-color: lightskyblue;
   border: none;
   color: white;
-  margin-right: 7rem;
-  
 }
 
 .homebtns {
